Added environmental variable to application.yml